dd/mm/yy

20/10/2018:
	Changed dotnet core version from 2.0 to 2.1
	
	DriveUtils.FindFolderInRoot:
		when folderid is not found, null is assigned for folderid instead of null
		
	Publisher.FilePath and Updater.FilePath:
		Corrected file paths for linux
		
	Publisher.CreateZip:
		uses WriteAllBytes instead of WriteAllText in order to copy binary files
		
	DriveUtils.GetVersions: 
		uses regex instead of equating strings
		
	Pubisher/FilePath: 
		addd win and linux directories for updater
		
	Publisher.GetUpdater: 
		now takes os parameter

26/07/2018:
	Ported to .NET Core.
	
	Rename folders to match VSProject names in the solution.
	
	Rewrote the code to be more object oriented:
		Created Project.cs, Version.cs
		Changed Publisher.cs and Updater.cs to be more object oriented:
			Contains Project object
			Contians only the functions used in thier own VSProject.
		
	Tweaks to make the code cleaner:
		Made Service object static, instead of passing it as an argument in every method.
		Made a static Load() method for each Json files to create the object and load the json file.
		Created DocoptWrapper:
			 Wrapper class to make using docopt a bit easier.
		Removed JsonWrapper class form all the projects and created individual class for each json file.
		Program.cs of VSProject Publisher and Updater now only calls methods from Publisher.cs and Updater.cs respectivly.
		Console.WriteLine() calls only takes place in Publisher.cs and Updater.cs
		
	Publisher now doesn't copy the updater during initialization instead it copies it in temp when creating updater (when getupdater is called).
	
	Added Features:
		Publsiher:
			initialize without versionName
			
			setversion
				set to target version by specifing VersionCode and VersionName,
				use --force option to set even if the target version exists on drive.
				
			push now has force option to delete the existing version on drive with same VersionCode that is being uploaded.
			
			pushnow