@@ -1,5 +1,13 @@
 dd/mm/yy
 
+26/10/2018:
+
+	DriveUtils.UploadFileToCloud:
+		Implemented multipart upload for large files
+	
+	Created ProgressBar:
+		Added progress bar when uploading files for feedback
+
 20/10/2018:
 	Changed dotnet core version from 2.0 to 2.1
 	
